fix minor layout bug with model index list

--- a/app/assets/stylesheets/_NEW/general/wrapper.sass
+++ b/app/assets/stylesheets/_NEW/general/wrapper.sass
@@ -6,3 +6,4 @@
   min-width: $max-width - ($space-s*2)
   position: relative
   width: $max-width - ($space-s*2)
+  @include micro-clearfix
